Fixing icon alignment

--- a/css/weather.less
+++ b/css/weather.less
@@ -7,9 +7,6 @@
 @storm-color: #AF9AB2;
 
 .condition-container {
-    position: relative;
-    width: 12em;
-    height: 10em;
     font-size: 2em; /* control icon size here */
     font-family: 'Roboto', sans-serif;
     background-color: @night-color;
